Bug 188645 - HTMLTableElement.insertRow(-1) should append a new row, per DOM Level 2 HTML Patch by Ruslan Ismailov <croo@nm.ru> r=caillon sr=bzbarsky